# ipython-mcp

./: .gitignore  README.md  pyproject.toml
src/ipython_mcp/: envs.py  kernel.py  server.py  sessions.py
tests/: smoke.py  test_envs.py  test_kernel.py  test_sessions.py
